# wagmi-v2

./: .env  README.md  bot.py  migration.sql  preinstall.sh  pyproject.toml  requirements.txt  wagmi.py  wagmi_vip_bot
