[tool.poetry]
name = "your-bot-project"
version = "0.1.0"
description = "Solana Telegram Bot"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "20.8"
solana = "0.34.0"
solders = "0.16.0"
httpx = "0.26.0"
sqlalchemy = "2.0.25"
python-dotenv = "1.0.0"
flask = "3.0.2"
psycopg2-binary = "2.9.9"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
